swagger and response stand
